# learn-eigen

./: CMakeLists.txt  CMakePresets.json  README.cpp  README.md  buildProblem.cpp  main-BiCGStab.cpp  main-Cholesky.cpp  main-SparseMatrix1-Qt.cpp  main-SparseMatrix1.cpp  main-SparseMatrixOperations.cpp  main-fillSparseMatrix.cpp  main-getElement.cpp  main-matrixFree.cpp  main-naiveCG.cpp  main-traverseSparseMatrix.cpp  main.cpp  utils.h
